[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/color-picker.png" type="Texture" id=1]
[ext_resource path="res://scripts/ShopOption.gd" type="Script" id=2]
[ext_resource path="res://assets/main-menu2.png" type="Texture" id=3]
[ext_resource path="res://scenes/HoverLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Hardpixel.OTF" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 22, 59, 2, 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[node name="ShopOption" type="Control"]
margin_right = 70.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 100 )
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 80.0
margin_right = 20.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 6
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 70.0
margin_right = 30.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HoverLabel" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
margin_left = -178.184
margin_top = 6.96176
margin_right = -98.1845
margin_bottom = 26.9618
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
